# simplefin-rotki

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Dockerfile  README.md  cliff.toml  flake.nix  renovate.json  simplefin-rotki.toml
.github/workflows/: pull_request.yml  push_main.yml
src/: html.rs  main.rs  rotki.rs  simplefin_api.rs
